fix addCart function
