# api/cart/v1/cart.pb.validate.go
@@ -105,11 +105,11 @@ func (m *AddCartRequest) validate(all bool) error {
 		errors = append(errors, err)
 	}
 
-	if wrapper := m.GetGoodsSku(); wrapper != nil {
+	if wrapper := m.GetGoodsSkuId(); wrapper != nil {
 
 		if wrapper.GetValue() <= 0 {
 			err := AddCartRequestValidationError{
-				field:  "GoodsSku",
+				field:  "GoodsSkuId",
 				reason: "value must be greater than 0",
 			}
 			if !all {
@@ -120,7 +120,31 @@ func (m *AddCartRequest) validate(all bool) error {
 
 	} else {
 		err := AddCartRequestValidationError{
-			field:  "GoodsSku",
+			field:  "GoodsSkuId",
+			reason: "value is required and must not be nil.",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if wrapper := m.GetGoodsSkuDesc(); wrapper != nil {
+
+		if l := utf8.RuneCountInString(wrapper.GetValue()); l < 1 || l > 50 {
+			err := AddCartRequestValidationError{
+				field:  "GoodsSkuDesc",
+				reason: "value length must be between 1 and 50 runes, inclusive",
+			}
+			if !all {
+				return err
+			}
+			errors = append(errors, err)
+		}
+
+	} else {
+		err := AddCartRequestValidationError{
+			field:  "GoodsSkuDesc",
 			reason: "value is required and must not be nil.",
 		}
 		if !all {
@@ -234,7 +258,9 @@ func (m *Cart) validate(all bool) error {
 
 	// no validation rules for GoodsId
 
-	// no validation rules for GoodsSku
+	// no validation rules for GoodsSkuId
+
+	// no validation rules for GoodsSkuDesc
 
 	// no validation rules for Num
 
