# app/cart/internal/data/ent/migrate/schema.go
@@ -13,7 +13,8 @@ var (
 		{Name: "id", Type: field.TypeInt64, Increment: true},
 		{Name: "user_id", Type: field.TypeInt64},
 		{Name: "goods_id", Type: field.TypeInt64},
-		{Name: "goods_sku", Type: field.TypeInt64},
+		{Name: "goods_sku_id", Type: field.TypeInt64},
+		{Name: "goods_sku_desc", Type: field.TypeString},
 		{Name: "num", Type: field.TypeInt32},
 		{Name: "created_at", Type: field.TypeTime, SchemaType: map[string]string{"mysql": "datetime"}},
 		{Name: "updated_at", Type: field.TypeTime, SchemaType: map[string]string{"mysql": "datetime"}},
