# app/cart/internal/data/ent/schema/cart.go
@@ -18,7 +18,8 @@ func (Cart) Fields() []ent.Field {
 		field.Int64("id"),
 		field.Int64("user_id"),
 		field.Int64("goods_id"),
-		field.Int64("goods_sku"),
+		field.Int64("goods_sku_id"),
+		field.String("goods_sku_desc"),
 		field.Int32("num"),
 		field.Time("created_at").
 			Default(time.Now).SchemaType(map[string]string{
